sjengida/g0/search
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/search/src/search.c:1118:4: error: use of undeclared identifier 'rc_index_0'
&& rc_index_0[path[ply - 1].captured] == rc_index_0[path[ply - 2].captured] ) 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/search/src/search.c:1118:42: error: use of undeclared identifier 'rc_index_0'
&& rc_index_0[path[ply - 1].captured] == rc_index_0[path[ply - 2].captured] ) 
                                         ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/search/src/obj/search.o] Error 1
